Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126256

[REG 6.6 -> 6.7] WebOTP crashes renderer process

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.3, 6.8.0 RC, 6.9.0 FF
    • 6.7.0, 6.7.1
    • WebEngine
    • None
    • 9839a94ca (dev), 408c7588f (6.8), d26d226ca (6.7)

    Description

      Opening web-otp.glitch.me in simplebrowser results in:

      [150413:150413:0611/191011.807334:ERROR:render_process_host_impl.cc(5365)] Terminating render process for bad Mojo message: Received bad user message: No binder found for interface blink.mojom.WebOTPService for the frame/document scope
      [150413:150413:0611/191011.807390:ERROR:bad_message.cc(29)] Terminating renderer for bad IPC message, reason 123
      

      despite WebOTP being disabled by QtWebEngine.

      From a related Brave browser issue:

      The feature in Blink is not disabled when it's disabled in Chromium by default, because it has kSetOnlyIfOverridden option.

      And indeed setting QTWEBENGINE_CHROMIUM_FLAGS=--disable-blink-features=WebOTP works around the crash.

      From a quick look through src/3rdparty/chromium/content/child/runtime_features.cc, only WebOTP seems to have kSetOnlyIfOverridden set, other features logged as disabled by QtWebEngine seem to be fine:

      * disable-features ConsolidatedMovementXY,InstalledApp,EyeDropper,BackgroundFetch,WebOTP,WebPayments,WebUSB).

      Downstream issue: Crash on requesting one-time password on National Insurance website · Issue #8222 · qutebrowser/qutebrowser

      Attachments

        For Gerrit Dashboard: QTBUG-126256
        # Subject Branch Project Status CR V

        Activity

          People

            anualiyas Anu Aliyas
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes